--- a/2.RL_Fundamentals/RLF.ipynb
+++ b/2.RL_Fundamentals/RLF.ipynb
@@ -78,6 +78,12 @@
     "grid_world = GridEnv(gamma=0.9, noise=0.2, living_reward=-0.04)\n",
     "policy_pi = encode_policy(grid_world)\n",
     "\n",
+    "# UP = 0; DOWN = 1; LEFT = 2; RIGHT = 3; STAY = np.nan\n",
+    "# policy_matrix = np.array([[RIGHT, RIGHT,  RIGHT,  STAY],\n",
+    "#                           [UP,    STAY,   UP,     STAY],\n",
+    "#                           [UP,    LEFT,   UP,     LEFT]])\n",
+    "# policy_pi = encode_policy(grid_world, policy_matrix = policy_matrix)\n",
+    "\n",
     "print(\"Action probabilities at state 0 are:\\n{}\".format(policy_pi[0]))"
    ]
   },
